# py621

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: p621dl-deploy.yml  py621dl-deploy.yml  py621dl-test.yml  python-app.yml
resources/: test_chunk-damaged.csv  test_chunk.csv
src/py621/: __init__.py  downloader.py  net.py  reader.py
src/py621dl/: __init__.py  downloader.py  exceptions.py  net.py  reader.py
tests/: downloader_test.py  net_test.py  reader_test.py
