# pyproject.toml

[project]
name = "py621dl"
version = "0.1a0.dev0"
description = "A downloader for e621.net with meant for iterability, using e621 db post exports, designed for deep learning."
readme = "README.md"
authors = [{ name = "APL", email = "slobodaapl@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
]

keywords = ["scraper", "downloader", "images"]

dependencies = [
    "pandas",
    "requests",
    "numpy",
    "Pillow",
    "opencv-python"
]

requires-python = ">=3.11"

[project.urls]
Homepage = ""

[project.entry-points.net]
downloader = "py621dl.downloader:E621Downloader"

[project.entry-points.reader]
downloader = "py621dl.reader:E621Reader"

[project.entry-points.setup]
downloader = "py621dl.__init__:enable_logging"
