# pyproject.toml

[tool.poetry]
name = "py621dl"
version = "0.1a1.dev0"
description = "A downloader for e621.net with meant for iterability, using e621 db post exports, designed for deep learning."
authors = ["slobodaapl <slobodaapl@gmail.com>"]
homepage = "https://pypi.org/project/py621dl"
repository = "https://github.com/slobodaapl/py621dl"
license = "GPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "*"
requests = "*"
numpy = "*"
Pillow = "*"
opencv-python = "*"

[tool.poetry.group.dev.dependencies]
pytest-socket = "*"
pytest-cov = "*"
pytest = "*"
pytest-dependency = "*"
pytest-order = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--disable-socket --allow-unix-socket"

[project.entry-points.net]
downloader = "py621dl.downloader:E621Downloader"

[project.entry-points.reader]
downloader = "py621dl.reader:E621Reader"

[project.entry-points.setup]
downloader = "py621dl.__init__:enable_logging"