# pyproject.toml

[tool.poetry]
name = "py621dl"
version = "0.0.1"
description = "A downloader for e621.net with meant for iterability, using e621 db post exports, designed for deep learning."
authors = ["slobodaapl <slobodaapl@gmail.com>"]
homepage = "https://pypi.org/project/py621dl"
repository = "https://github.com/slobodaapl/py621dl"
license = "GPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "3.11"
pandas = "1.5.3"
requests = "2.27.1"
numpy = "1.24.2"
Pillow = "9.4.0"
opencv-python = "4.7.0.72"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.2"
pytest-socket = "0.6.0"
pytest-cov = "4.0.0"
pytest-dependency = "0.5.1"
pytest-order = "1.1.0"
pytest-timeout = "2.1.0"
flake8 = "6.0.0"

[tool.poetry.group.deploy.dependencies]
python-semantic-release = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--disable-socket --allow-unix-socket --timeout 50"

[project.entry-points.net]
downloader = "py621dl.downloader:E621Downloader"

[project.entry-points.reader]
downloader = "py621dl.reader:E621Reader"

[project.entry-points.setup]
downloader = "py621dl.__init__:enable_logging"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default
